--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div id="home">
         <div class="container">
+            <div id="date-year"></div>
             <div class="clock">
                 <div id="hour"></div>
                 <div id="clock-separator"></div>
